cleanup a little of the stack controller

--- a/deploy/crds/polaris_v1alpha1_polarisstack_cr.yaml
+++ b/deploy/crds/polaris_v1alpha1_polarisstack_cr.yaml
@@ -27,4 +27,5 @@ spec:
   parameters:
     RepositoryName: somethingcool
   finalizers:
+  - polaris.cleanup.aws.stack.containerregistry
   - polaris.cleanup.aws.stack
