--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: polaris-operator
           # Replace this with the built image name
-          image: tomwells/polaris-operator
+          image: tomwells/polaris-operator:1.0.0
           ports:
           - containerPort: 60000
             name: metrics
